[build-system]
# 定義用什麼工具來封裝你的專案，這兩行通常是固定的
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 專案的基本資訊
name = "nanoelectroniclab_qcodes"
version = "0.1.0"
description = "nanoelectroniclab QCoDeS template"
readme = "README.md"
requires-python = ">=3.12"

# 這裡列出實驗室「一定要安裝」的套件
dependencies = [
    "qcodes>=0.40.0",
    "numpy",
    "matplotlib",
    "pyvisa-py",
    "typing_extensions",
    "plottr",
    "requests>=2.32.5",
    "qcodes-contrib-drivers>=0.24.1",
]

[tool.setuptools]
# 告訴 Python 哪些資料夾應該被當作套件模組
packages = ["drivers", "lab_utils"]
